<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<LinearLayout
    android:id="@+id/beacon_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout
    android:id="@+id/back_ground_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone" >
    
</LinearLayout>

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:text="兌換次數" />

<EditText
    android:id="@+id/run_nember"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10" >

    <requestFocus />
</EditText>

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="start"
    android:text="Button" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="設定" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="range" />

<EditText
    android:id="@+id/range"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="確認次數" />

<EditText
    android:id="@+id/condition"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="rssi強度" />

<EditText
    android:id="@+id/rssi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="結束兌換與開始兌換delay的時間" />

<EditText
    android:id="@+id/delay_nember"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10" />

</LinearLayout>

<LinearLayout
    android:id="@+id/connect_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:visibility="gone" >

    <TextView
        android:id="@+id/Scan_device_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="掃描到裝置，連接中..."
        android:textSize="30sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:visibility="gone" >

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="18sp"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:visibility="gone" >

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_data"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/no_data"
                  android:textSize="18sp"/>
    </LinearLayout>
<ExpandableListView
        android:id="@+id/gatt_services_list"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:visibility="gone" />

</LinearLayout>

<ListView
    android:id="@+id/scan_list"
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_weight="0.61"
    android:visibility="invisible" >
</ListView>

</RelativeLayout>
